2015-01-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove duplicate cmake_minimum_required.

2015-01-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Link test-hosts with the correct library when
	in a static build.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Add check for required libgcrypt. It was already expected to be
	present (see usage of libgcrypt-config), but never checked for.
	Starting with GnuTLS 3.0, libgcrypt is no longer a dependency of
	libgnutls, so a separate check is required anyway for the future.

	* CMakeLists.txt: Try to find libgcrypt before calling
	libgcrypt-config. Raise SEND_ERROR if the library can not be found.

	* INSTALL: Note libgcrypt as prerequisite.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/CMakeLists.txt: Check for bison before attempting to use it.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt, misc/CMakeLists.txt: Make it a SEND_ERROR instead of
	a FATAL_ERROR if a required library was not found with find_library.
	This mimics the behavior of pkg_check_modules and makes it possible
	for the user to gather all required libraries after one CMake run
	instead of having to step through all dependencies one by one. Remove
	now obsolete TODO.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Check if pkg-config was found. Abort and log a fatal
	error if it is not found.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta6.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0+beta5 release.

	* CHANGES: Updated.

2015-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_server.c (server_attach_internal): Use unsigned int for
	retries, to avoid passing negatives to the sleep function.
